--- a/package.json
+++ b/package.json
@@ -1,20 +1,32 @@
 {
   "name": "mern-goals",
   "version": "1.0.0",
+  "type": "module",
   "description": "A FullStack MERN based application",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node backend/server.js",
+    "server": "nodemon backend/server.js"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/a8hay/mern-goals.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "Abhay",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/a8hay/mern-goals/issues"
   },
-  "homepage": "https://github.com/a8hay/mern-goals#readme"
+  "homepage": "https://github.com/a8hay/mern-goals#readme",
+  "dependencies": {
+    "colors": "^1.4.0",
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1",
+    "express-async-handler": "^1.2.0",
+    "mongoose": "^6.4.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.16"
+  }
 }
